Atualiza layout final estilizado

--- a/index.html
+++ b/index.html
@@ -3,40 +3,52 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>HMRO BARBEARIA</title>
+  <title>Barbearia HMRO</title>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>HMRO</h1>
+      <h1>Barbearia HMRO</h1>
       <nav>
-        <a href="#home">Início</a>
-        <a href="https://www.instagram.com/hmrobarbershop" target="_blank">Instagram</a>
+        <a href="#instagram">Instagram</a>
         <a href="#agendar">Agendar</a>
         <a href="#local">Localização</a>
       </nav>
     </div>
   </header>
 
-  <section id="home" class="hero">
+  <section class="hero" id="home">
     <div class="overlay"></div>
     <div class="content">
-      <h2>Estilo, Tradição e Atitude</h2>
-      <a class="btn" href="https://wa.me/5541996910927?text=Ol%C3%A1%2C%20tudo%20bem%3F%20Vim%20atrav%C3%A9s%20do%20site%20e%20gostaria%20de%20agendar%20um%20hor%C3%A1rio" target="_blank">Agendar no WhatsApp</a>
+      <h2>Barbearia HMRO</h2>
+      <p>Estilo, Tradição e Atitude</p>
     </div>
   </section>
 
-  <section id="local" class="map-section">
-    <h3>Nosso Endereço</h3>
+  <section id="instagram" class="section">
+    <h3>Instagram</h3>
+    <p>Siga a gente no Insta:</p>
+    <a href="https://www.instagram.com/hmrobarbershop" target="_blank" class="insta-link">@hmrobarbershop</a>
+  </section>
+
+  <section id="local" class="section">
+    <h3>Localização</h3>
+    <p>Rua David Bodziak, 859 - Curitiba/PR</p>
     <div class="map-container">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3601.268314223005!2d-49.22470282377598!3d-25.38155273138708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce6be0a1e2f91%3A0x2d4d44db1f7305ee!2sR.%20David%20Bodziak%2C%20859%20-%20Abranches%2C%20Curitiba%20-%20PR%2C%2082710-260%2C%20Brasil!5e0!3m2!1spt-BR!2sbr!4v1721767997360!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
   </section>
 
+  <section id="agendar" class="section agendar-section">
+    <h3>Agendar Horário</h3>
+    <p>Clique abaixo para falar conosco no WhatsApp</p>
+    <a class="btn" href="https://wa.me/5541996910927?text=Ol%C3%A1%2C%20tudo%20bem%3F%20Vim%20atrav%C3%A9s%20do%20site%20e%20gostaria%20de%20agendar%20um%20hor%C3%A1rio" target="_blank">Agendar no WhatsApp</a>
+  </section>
+
   <footer>
-    <p>© 2025 HMRO Barbearia</p>
+    <p>© 2025 Barbearia HMRO</p>
   </footer>
 </body>
 </html>
