--- a/index.html
+++ b/index.html
@@ -1,54 +1,127 @@
+
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Barbearia HMRO</title>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;700&display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Barbearia HMRO</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', sans-serif;
+            background-color: #121212;
+            color: #fff;
+        }
+        header {
+            background-color: #1c1c1c;
+            padding: 20px 0;
+            text-align: center;
+            font-size: 2rem;
+            font-weight: bold;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            background-color: #2a2a2a;
+            padding: 15px 0;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
+        nav a:hover {
+            color: #bbbbbb;
+        }
+        section {
+            padding: 40px 20px;
+            text-align: center;
+        }
+        .galeria {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+        }
+        .galeria img {
+            width: 100%;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.6);
+            transition: transform 0.3s ease;
+        }
+        .galeria img:hover {
+            transform: scale(1.05);
+        }
+        .mapa iframe {
+            width: 100%;
+            height: 400px;
+            border: 0;
+        }
+        .btn-agendar {
+            display: inline-block;
+            margin-top: 40px;
+            padding: 15px 30px;
+            background-color: #00e676;
+            color: #000;
+            font-size: 1.2rem;
+            border: none;
+            border-radius: 8px;
+            text-decoration: none;
+        }
+        footer {
+            background-color: #1c1c1c;
+            text-align: center;
+            padding: 20px;
+            font-size: 0.9rem;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>Barbearia HMRO</h1>
-      <nav>
-        <a href="#instagram">Instagram</a>
+
+    <header>Barbearia HMRO</header>
+
+    <nav>
+        <a href="#galeria">Nossa Barbearia</a>
+        <a href="https://www.instagram.com/hmrobarbershop" target="_blank">Instagram</a>
+        <a href="#mapa">Localização</a>
         <a href="#agendar">Agendar</a>
-        <a href="#local">Localização</a>
-      </nav>
-    </div>
-  </header>
+    </nav>
 
-  <section class="hero" id="home">
-    <div class="overlay"></div>
-    <div class="content">
-      <h2>Barbearia HMRO</h2>
-      <p>Estilo, Tradição e Atitude</p>
-    </div>
-  </section>
+    <section id="galeria">
+        <h2>Nossa Barbearia</h2>
+        <div class="galeria">
+            <img src="7278b4e1-b60d-40c9-8208-2d303a358999.jpg" alt="Imagem da barbearia">
+            <img src="03788737-fef6-4596-a1a2-64fc4acc4728.jpg" alt="Imagem da barbearia">
+            <img src="ab667deb-40b8-4f88-bd83-b334a86bf5aa.jpg" alt="Imagem da barbearia">
+            <img src="b86c1855-3fed-4b14-9d16-670dfca59e95.jpg" alt="Imagem da barbearia">
+            <img src="c7923fef-aadd-4885-8905-09608e2a3e2d.jpg" alt="Imagem da barbearia">
+            <img src="2d1c92eb-684d-4edd-8562-0ac6a46c9523.jpg" alt="Imagem da barbearia">
+            <img src="0479b88d-2a2d-4548-b083-58b7a4dbd64d.jpg" alt="Imagem da barbearia">
+            <img src="0841f9f2-3e4c-45e5-ba2c-79399cb3879d.jpg" alt="Imagem da barbearia">
+            <img src="6716ac61-a66d-4896-9ab6-ae4f6b52b227.jpg" alt="Imagem da barbearia">
 
-  <section id="instagram" class="section">
-    <h3>Instagram</h3>
-    <p>Siga a gente no Insta:</p>
-    <a href="https://www.instagram.com/hmrobarbershop" target="_blank" class="insta-link">@hmrobarbershop</a>
-  </section>
+        </div>
+    </section>
 
-  <section id="local" class="section">
-    <h3>Localização</h3>
-    <p>Rua David Bodziak, 859 - Curitiba/PR</p>
-    <div class="map-container">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3601.268314223005!2d-49.22470282377598!3d-25.38155273138708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce6be0a1e2f91%3A0x2d4d44db1f7305ee!2sR.%20David%20Bodziak%2C%20859%20-%20Abranches%2C%20Curitiba%20-%20PR%2C%2082710-260%2C%20Brasil!5e0!3m2!1spt-BR!2sbr!4v1721767997360!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </div>
-  </section>
+    <section id="mapa" class="mapa">
+        <h2>Onde estamos</h2>
+        <iframe 
+            src="https://www.google.com/maps?q=Rua+David+Bodziak,+859,+Curitiba,+PR,+82710-260,+Brasil&output=embed"
+            allowfullscreen=""
+            loading="lazy">
+        </iframe>
+    </section>
 
-  <section id="agendar" class="section agendar-section">
-    <h3>Agendar Horário</h3>
-    <p>Clique abaixo para falar conosco no WhatsApp</p>
-    <a class="btn" href="https://wa.me/5541996910927?text=Ol%C3%A1%2C%20tudo%20bem%3F%20Vim%20atrav%C3%A9s%20do%20site%20e%20gostaria%20de%20agendar%20um%20hor%C3%A1rio" target="_blank">Agendar no WhatsApp</a>
-  </section>
+    <section id="agendar">
+        <h2>Agende seu horário</h2>
+        <a class="btn-agendar" href="https://wa.me/5541996910927?text=Ol%C3%A1%2C+tudo+bem%3F+Vim+atrav%C3%A9s+do+site+e+gostaria+de+agendar+um+hor%C3%A1rio" target="_blank">
+            Agendar no WhatsApp
+        </a>
+    </section>
 
-  <footer>
-    <p>© 2025 Barbearia HMRO</p>
-  </footer>
+    <footer>
+        &copy; 2025 Barbearia HMRO - Todos os direitos reservados.
+    </footer>
 </body>
 </html>
