--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 
     <section id="mapa" class="mapa">
         <h2>Onde estamos</h2>
+        <p style="color: white; font-size: 1.2em; margin-top: -10px;">Como chegar:</p>
         <iframe 
             src="https://www.google.com/maps?q=Rua+David+Bodziak,+859,+Curitiba,+PR,+82710-260,+Brasil&output=embed"
             allowfullscreen=""
