Atualiza link do botão de agendamento

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 <section id="agendar">
   <h2>Agende seu horário</h2>
-  <a class="btn-agendar" href="https://wa.me/5541996910927?text=Reservei%20um%20hor%C3%A1rio%20pelo%20site%2C%20logo%20estou%20a%C3%AD" target="_blank">
+  <a class="btn-agendar" href="https://wa.me/5541996910927?text=Ol%C3%A1!%20Quero%20marcar%20meu%20hor%C3%A1rio,%20vi%20pelo%20site.%20%F0%9F%98%8A" target="_blank">
     Agendar no WhatsApp
   </a>
 </section>
